--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "typescript": "^4.3.2",
     "unocss": "^0.29.2",
     "unplugin-auto-import": "^0.6.9",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.5.4",
     "vite-plugin-html": "^2.0.7",
     "vite-plugin-inspect": "^0.4.3",
