--- a/package.json
+++ b/package.json
@@ -19,6 +19,63 @@
     "preinstall": "npx only-allow pnpm",
     "reinstall": "rimraf pnpm-lock.yaml && rimraf node_modules && pnpm bootstrap"
   },
+  "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "@vueuse/core": "^8.7.5",
+    "ant-design-vue": "3.1.1",
+    "axios": "^0.26.1",
+    "gl-transitions": "^1.43.0",
+    "lodash-es": "^4.17.21",
+    "mockjs": "^1.1.0",
+    "pinia": "2.0.12",
+    "three": "^0.135.0",
+    "uuid": "^8.3.2",
+    "vue": "^3.2.37",
+    "vue-i18n": "9.1.9",
+    "vue-router": "^4.0.16"
+  },
+  "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/mockjs": "^1.0.6",
+    "@types/node": "^16.11.41",
+    "@types/three": "^0.135.0",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@unocss/reset": "^0.29.6",
+    "@vitejs/plugin-legacy": "^1.8.2",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vue/compiler-sfc": "^3.2.37",
+    "chalk": "^4.1.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "lint-staged": "^12.5.0",
+    "prettier": "~2.6.2",
+    "rimraf": "^3.0.2",
+    "simple-git-hooks": "^2.8.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "typescript": "^4.7.4",
+    "unocss": "^0.29.6",
+    "unplugin-auto-import": "^0.9.1",
+    "unplugin-vue-components": "^0.19.9",
+    "vite": "^2.9.12",
+    "vite-plugin-html": "^2.1.2",
+    "vite-plugin-inspect": "^0.4.3",
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-pages": "^0.24.2",
+    "vitest": "^0.16.0",
+    "vue-eslint-parser": "^7.11.0",
+    "vue-tsc": "^0.38.1"
+  },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged --concurrent false",
     "commit-msg": "pnpm exec node scripts/verifyCommit.js $1"
@@ -47,67 +104,11 @@
       "prettier --write"
     ]
   },
-  "dependencies": {
-    "@ant-design/icons-vue": "^6.0.1",
-    "@vueuse/core": "^8.2.0",
-    "ant-design-vue": "3.1.1",
-    "axios": "^0.26.1",
-    "gl-transitions": "^1.43.0",
-    "lodash-es": "^4.17.21",
-    "mockjs": "^1.1.0",
-    "pinia": "2.0.12",
-    "three": "^0.135.0",
-    "uuid": "^8.3.2",
-    "vue": "^3.2.21",
-    "vue-i18n": "9.1.9",
-    "vue-router": "^4.0.14"
-  },
-  "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
-    "@types/jest": "^27.0.1",
-    "@types/lodash-es": "^4.17.4",
-    "@types/mockjs": "^1.0.4",
-    "@types/node": "^16.11.26",
-    "@types/three": "^0.135.0",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "@unocss/reset": "^0.29.2",
-    "@vitejs/plugin-legacy": "^1.4.4",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@vitejs/plugin-vue-jsx": "^1.1.8",
-    "@vue/compiler-sfc": "^3.2.6",
-    "chalk": "^4.1.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jest": "^24.4.2",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.2.0",
-    "less": "^4.1.1",
-    "lint-staged": "12",
-    "prettier": "2.6",
-    "rimraf": "^3.0.2",
-    "simple-git-hooks": "^2.7.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.2",
-    "unocss": "^0.29.2",
-    "unplugin-auto-import": "^0.6.9",
-    "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.5.4",
-    "vite-plugin-html": "^2.0.7",
-    "vite-plugin-inspect": "^0.4.3",
-    "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-pages": "^0.22.0",
-    "vitest": "^0.12.3",
-    "vue-eslint-parser": "^7.8.0",
-    "vue-tsc": "^0.2.2"
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "rollup"
+      ]
+    }
   }
 }
