--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
     "uuid": "^8.3.2",
     "vue": "^3.2.37",
     "vue-i18n": "9.1.9",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.1.0"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.6",
+    "@iconify-json/iconoir": "^1.1.8",
+    "@iconify-json/mdi": "^1.1.24",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@ls-lint/ls-lint": "^1.11.2",
     "@types/lodash-es": "^4.17.6",
     "@types/mockjs": "^1.0.6",
-    "@types/node": "^16.11.41",
+    "@types/node": "^16.11.43",
     "@types/three": "^0.135.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -67,17 +70,17 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "typescript": "^4.7.4",
-    "unocss": "^0.29.6",
-    "unplugin-auto-import": "^0.9.1",
+    "unocss": "^0.41.2",
+    "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.19.9",
-    "vite": "^2.9.12",
+    "vite": "^2.9.13",
     "vite-plugin-html": "^2.1.2",
     "vite-plugin-inspect": "^0.4.3",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-pages": "^0.24.2",
+    "vite-plugin-pages": "^0.25.0",
     "vitest": "^0.16.0",
     "vue-eslint-parser": "^7.11.0",
-    "vue-tsc": "^0.38.1"
+    "vue-tsc": "^0.38.2"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged --concurrent false",
