chore: resource composable

--- a/playground/editor/package.json
+++ b/playground/editor/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@chiulipine/const": "workspace:*",
     "@chiulipine/resource": "workspace:*",
+    "@chiulipine/utils": "workspace:*",
     "@chiulipine/components": "workspace:*",
     "@chiulipine/track": "workspace:*"
   }
