--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,7 +107,7 @@
   },
   "i18n-ally.sourceLanguage": "en",
   "i18n-ally.keystyle": "nested",
-  "i18n-ally.localesPaths": "locales",
+  "i18n-ally.localesPaths": "playground/editor/locales",
   "i18n-ally.sortKeys": true,
   "css.validate": false,
   "less.validate": false,
