style: sub module to sub repo

--- a/packages/track/package.json
+++ b/packages/track/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chiulipine/const": "workspace:*",
     "@chiulipine/player": "workspace:*",
+    "@chiulipine/resource": "workspace:*",
     "@chiulipine/utils": "workspace:*"
   }
 }
