--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@chiulipine/player",
   "version": "0.0.0",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@chiulipine/const": "workspace:*",
+    "@chiulipine/track": "workspace:*",
+    "@chiulipine/utils": "workspace:*",
+    "@chiulipine/resource": "workspace:*"
+  }
 }
