--- a/playground/editor/package.json
+++ b/playground/editor/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "@chiulipine/const": "workspace:*",
     "@chiulipine/resource": "workspace:*",
-    "@chiulipine/utils": "workspace:*",
+    "@chiulipine/track": "workspace:*",
     "@chiulipine/components": "workspace:*",
-    "@chiulipine/track": "workspace:*"
+    "@chiulipine/utils": "workspace:*",
+    "@chiulipine/player": "workspace:*"
   }
 }
